--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
   </head>
   <body>
     <div id="container"></div>
+    
     <script src="threejs/three.min.js"></script>
     <script src="threejs/OrbitControls.js"></script>
+    <script src="threejs/STLLoader.js"></script>
+
     <script src="build/bundle.js"></script>
   </body>
 </html>
